--- a/app/views/images/_drawer_data.html.erb
+++ b/app/views/images/_drawer_data.html.erb
@@ -7,9 +7,9 @@
 	<span style="white-space:pre-wrap;" class="navbar-brand">Clinical Data</span>
 </header>
 <ul class="list-group">
-	<div>
+	<% if current_user %>
 		<div style="float:right;" class="btn-group">
-		   	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quick Add</button>
+		   	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New Data</button>
 		   	<div class="dropdown-menu">
 		   		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="patient-id" data-label="Patient ID">Patient ID</a>
 				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="age" data-label="Age (years)">Age</a>
@@ -23,7 +23,7 @@
 				<a class="dropdown-item" href="#">Other</a>
 		   	</div>
 		</div>
-	</div>
+	<% end %>
 	<div>
 		<table style="font-size:12px;" class="table table-hover">
 		  <thead>
@@ -42,48 +42,50 @@
 	  		</tbody>
 		</table>
 	</div>
-	<header>
-		<span style="white-space:pre-wrap;" class="navbar-brand">Import Data</span>
-		Only JSON file format is accepted at this time
-	</header>
-	<div class="upload-data" style="padding:15px;">
-		<%= form_for image_json do |f| %>
-	  		<%= f.file_field :upload %>
-			<%= f.hidden_field :image_id, :value=> image.id %>
-	  	<%= f.submit 'Upload', :style=>'float:right', :class=>"btn btn-success"%>
-		<% end %>
-	</div>
+	<% if current_user %>
+		<header>
+			<span style="white-space:pre-wrap;" class="navbar-brand">Import Data</span>
+			Only JSON file format is accepted at this time
+		</header>
+		<div class="upload-data" style="padding:15px;">
+			<%= form_for image_json do |f| %>
+		  		<%= f.file_field :upload %>
+				<%= f.hidden_field :image_id, :value=> image.id %>
+		  	<%= f.submit 'Upload', :style=>'float:right', :class=>"btn-raised btn btn-success"%>
+			<% end %>
+		</div>
 
-	<script type="text/javascript">
-		$('.dropdown-item').bind('click', function(){
-			callModal(this);
-		});
+		<script type="text/javascript">
+			$('.dropdown-item').bind('click', function(){
+				callModal(this);
+			});
 
-		function submitData(){
-			var image_id = <%=image.id %>;
-			var modal_data_key = $('#quick_input_field_key').val();
-			var modal_data_value = $('#quick_input_field').val();
-	 		var separator = (window.location.href.indexOf("?")===-1)?"?":"&";
+			function submitData(){
+				var image_id = <%=image.id %>;
+				var modal_data_key = $('#quick_input_field_key').val();
+				var modal_data_value = $('#quick_input_field').val();
+		 		var separator = (window.location.href.indexOf("?")===-1)?"?":"&";
 
-	 		var payload = {
-	 			id: image_id,
-	 			meta_key: modal_data_key, 
-	 			meta_value: modal_data_value
-	 		};
+		 		var payload = {
+		 			id: image_id,
+		 			meta_key: modal_data_key, 
+		 			meta_value: modal_data_value
+		 		};
 
-	 		$.post("/clinical_data/single", payload, function(data){
-	 			location.reload();
-	 		});
-		}
+		 		$.post("/clinical_data/single", payload, function(data){
+		 			location.reload();
+		 		});
+			}
 
-		function callModal(object){
-			var data_key = $(object).attr('data-key');
-			var data_label = $(object).attr('data-label');
-			$('#general-modal-title').html('Enter ' + data_label);
-			$('#quick_input_field_key').val(data_key);
+			function callModal(object){
+				var data_key = $(object).attr('data-key');
+				var data_label = $(object).attr('data-label');
+				$('#general-modal-title').html('Enter ' + data_label);
+				$('#quick_input_field_key').val(data_key);
 
-		}
-	</script>
+			}
+		</script>
+	<% end %>
 
 </ul>
 
