--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -14,6 +14,18 @@
 
 @import "bootstrap";
 
+.table-warning, .table-warning>td, .table-warning>th {
+    background-color: #fcf8e3 !important;
+}
+
+.table-success, .table-success>td, .table-success>th {
+    background-color: #dff0d8 !important;
+}
+
+.table-info, .table-info>td, .table-info>th {
+    background-color: #d9edf7 !important;
+}
+
 #top-nav{
     z-index:6;
 }
@@ -106,7 +118,7 @@
     display:none;
 }
 
-.images_show{
+.images_show, .runs_show{
     .full-width-container{
         padding:0px;
     }
