--- a/app/views/images/_drawer_home.html.erb
+++ b/app/views/images/_drawer_home.html.erb
@@ -8,7 +8,9 @@
   <a data-tab="drawer-data" class="list-group-item drawer-link">
     <i class="material-icons" role="presentation">inbox</i>Clinical Data
   </a>
-
+  <a data-tab="drawer-home" class="list-group-item drawer-link" href="#" data-toggle="modal" data-target="#run-modal">
+    <i class="material-icons" role="presentation">code</i>Run Analysis
+  </a>
   <li class="bmd-layout-spacer"></li>
 
   <a class="list-group-item">
