Use a data directory for production and development
Production server uses dp-data as data directory, different than development's data folder.

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -19,7 +19,7 @@
 	var viewer = OpenSeadragon({
 	    id:            "<%=@image.upload_file_name.parameterize%>",
 	    prefixUrl:     "/openseadragon/images/",
-	    tileSources:   "/data/<%=@image.file_name_prefix%>/<%=@image.file_name_prefix%>.dzi",
+	    tileSources:   "/<@=Rails.application.config.data_directory%>/<%=@image.file_name_prefix%>/<%=@image.file_name_prefix%>.dzi",
 	});
 
 	var data = JSON.parse(results);
