Adjust language of the home page

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -14,6 +14,10 @@
 
 @import "bootstrap";
 
+.openseadragon{
+    background:#eee;
+}
+
 .table-warning, .table-warning>td, .table-warning>th {
     background-color: #fcf8e3 !important;
 }
