--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <br/><br/>
-<h1>Image Archive</h1>
-<h4>Check out all the cool images we have uploaded!</h4>
+<h1>Digital Pathology Image Archive</h1>
+<h4>The list below is a repository of all the images that are available for public access</h4>
 <br/><br/>
 <%= link_to new_image_path do %>
 	<button style="float:right" class="btn btn-success">+ Upload New Image</button>
