--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 
 <div style="padding-top:50px;" class="container">
-<h2>Hello there, welcome to ImageViewer!</h2>
+<h1>Digital Pathology Imageviewer</h1>
+<p>Welcome to Digital Pathology Imageviewer, an online portal for viewing, sharing and analyzing pathology images.</br>To begin, please <a href="/users/sign_up">create an account</a> or <a href="/images">browse our publicly available pathology images</a>.</p>
+<p>Digital Pathology Imageviewer is built and maintained by Alice Shen of Dr. Kong's laboratory at Emory University. <br/>Please direct any comments, questions or inquiries via <a href="mailto:ays0110@gmail.com">email here.</a></p>
 <br/><br/>
 
 <div id="example-wide-dzi" class="openseadragon">
@@ -26,3 +28,7 @@ OpenSeadragon({
     }]
 });
 </script>
+</br><br/>
+<center><small>Online viewers and deep zoom image support is enabled by <a href="https://openseadragon.github.io/">OpenSeadragon</a> and <a href="http://openslide.org/">OpenSlide</a> libraries.</small></center>
+</br><br/>
+</br><br/>
