--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,14 @@
     </button>
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="/">Home</a>
+        <a class="hidden-sm-down nav-link active" href="/">Home</a>
+        <a style="margin-left:0px;" class="hidden-sm-up nav-link active" href="/">DP Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item hidden-sm-down">
         <a class="nav-link" href="#">About<a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Image Archive</a>
+        <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Images</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="/images">All Images</a>
           <a class="dropdown-item" href="/images/new">Upload</a>
