--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,24 +41,24 @@
       </li>
     </ul>
     <ul class="nav navbar-nav pull-xs-right">
-      <li class="nav-item">
         <% if !current_user %>
-          <%=link_to new_user_session_path, :style=>'line-height:15px;', :class=> 'nav-link' do %>
-            Sign In
-          <% end %>
+          <li class="nav-item">
+            <%=link_to new_user_session_path, :style=>'line-height:15px;', :class=> 'nav-link' do %>
+              Sign In
+            <% end %>
+          </li>
         <% else %>
           <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
-          <a class="dropdown-item" href="#">My Images</a>
-        </div>
-      </li>
+            <a class="nav-link dropdown-toggle"  style="line-height:15px;" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
+              <a class="dropdown-item" href="#">My Images</a>
+            </div>
+          </li>
         <% end %>
-      </li>
       <li class="nav-item">
         <div class="bmd-form-group bmd-collapse-inline pull-xs-right">
-          <button style="margin-top:4px" class="btn bmd-btn-icon collapsed" for="search" data-toggle="collapse" data-target="#collapse-search-1" aria-controls="collapse-search-1" aria-expanded="false">
+          <button class="btn bmd-btn-icon collapsed" for="search" data-toggle="collapse" data-target="#collapse-search-1" aria-controls="collapse-search-1" aria-expanded="false">
             <i class="material-icons">search</i>
           <div class="ripple-container"></div></button>
           <span id="collapse-search-1" class="width collapse" aria-expanded="false" style="width: 0px;">
@@ -68,7 +68,7 @@
       </li>
       <li class="nav-item">
         <div class="dropdown">
-          <button style="margin-top:4px" class="btn bmd-btn-icon btn-secondary dropdown-toggle" type="button" id="more-menu-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn bmd-btn-icon btn-secondary dropdown-toggle" type="button" id="more-menu-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons" >more_vert</i>
           <div class="ripple-container"></div></button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="more-menu-1">
