--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -13,7 +13,9 @@
 			<p>Status:<br/><b><%=@run.status_words%></b></p>
 			<p>Image Title:<br/><b><%=@image.title%></b></p>
 			<p>Algorithm Ran:<br/><b><%=@algorithm.name%> (ID: <%=@algorithm.id%>)</b></p>
-			<p>Started:<br/><b><%=Time.at(@run.run_at).in_time_zone.to_formatted_s(:db) %></b></p>
+			<% if @run.runat %>
+				<p>Started:<br/><b><%=Time.at(@run.run_at).in_time_zone.to_formatted_s(:db) %></b></p>
+			<% end %>
 			<%if @run.complete %>
 				<p>Completed:<br/><b><%=@run.updated_at.in_time_zone.to_formatted_s(:db) %> (Took <%=distance_of_time_in_words(Time.at(@run.run_at), @run.updated_at)%>)</b></p>
 			<% end %>
