Small CSS change

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -126,8 +126,7 @@
 
 .images_show, .runs_show{
     .full-width-container{
-        padding-left:0px;
-        padidng-right:0px;
+        padding:0px;
     }
 
     .navbar-toggler{
