Preliminary slice traversal, does not play well with annotaitons yet

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,7 @@
  * file per style scope.
  *
  *= require_tree ../../../bower_components/formstone/dist/css
+ *= require jquery-ui
+ *= require bootstrap-slider
  *= require_tree .
  */
