--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -102,7 +102,7 @@
 
 <div class="container">
 	<br/><br/>
-	<h1>Upload Image</h1>
+	<h1>Upload Images</h1>
 	<h4>Only SVS and NDPI file formats supported at this time</h4>
 	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
