--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
             <a class="nav-link dropdown-toggle"  style="line-height:15px;" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
-              <a class="dropdown-item" href="#">My Images</a>
+              <a class="dropdown-item" href="<%=my_images_images_path%>">My Images</a>
             </div>
           </li>
         <% end %>
