--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -13,16 +13,18 @@
 
     <div class="bmd-layout-content">
 		<div class="row">
-			<div class="col-11" style="padding-right:0px;">
+			<div class="<%= @image.threed? ? 'col-11' : 'col-12' %>" style="padding-right:0px;">
 				<div id="openseadragon-container" class="openseadragon">
 				</div>
 			</div>
-			<div style="background:#aaa;" class="col-1">
-				<div style="margin-top:100px;">
-					<h3>Slice</h3>
-					<input id="sliceNavigator" class="form-control" type="text" data-slider-min="0" data-slider-max="<%=@slices.length - 1%>" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical"/>
+			<% if @image.threed? %>
+				<div style="background:#aaa;" class="col-1">
+					<div style="margin-top:100px;">
+						<h3>Slice</h3>
+						<input id="sliceNavigator" class="form-control" type="text" data-slider-min="0" data-slider-max="<%=@slices.length - 1%>" data-slider-step="1" data-slider-value="0" data-slider-orientation="vertical"/>
+					</div>
 				</div>
-			</div>
+			<% end %>
 		</div>
 	</div>
 </div>
