--- a/app/views/images/my_images.html.erb
+++ b/app/views/images/my_images.html.erb
@@ -35,6 +35,7 @@
 	  	</tr>
 	  </thead>
 	  <%= form_tag confirm_3d_images_path do %>
+	  	<%= submit_tag "Delete Image", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> confirm_delete_images_path %>
 	  	<%= submit_tag "Convert to 3D Volume", :style=> 'float:right', :class=> 'btn btn-success btn-raised'%>
 		  <tbody>
 		  	<% @images.each do |image| %>
